--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3"
-  }
+  },
+  "keywords": ["Fediverse", "fedi"]
 }
