--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fedi-well-known",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -15,5 +15,8 @@
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3"
   },
-  "keywords": ["Fediverse", "fedi"]
+  "keywords": [
+    "Fediverse",
+    "fedi"
+  ]
 }
