--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
   "name": "fedi-well-known",
-  "version": "0.2.1",
-  "main": "src/index.js",
+  "version": "0.3.0",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "scripts": {
+    "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest",
-    "start": "node src/index.js"
+    "start": "tsc && node dist/index.js",
+    "build": "tsc"
   },
   "repository": "https://github.com/knownverse/fedi-well-known",
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    }
+  },
   "author": "",
   "license": "MIT",
   "description": "Fetch typical Fediverse paths",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "jest-fetch-mock": "^3.0.3"
+    "jest-fetch-mock": "^3.0.3",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4"
   },
   "keywords": [
     "Fediverse",
